--- a/static/style.css
+++ b/static/style.css
@@ -2,3 +2,15 @@ h1 {
     text-align: center;
     font-size: 60px;
 }
+
+.div1{
+    background-color:lightblue;
+    width:200px;
+    height:500px;
+    overflow:scroll;
+}
+
+.rowStyle{
+    position:fixed;
+}
+
