--- a/static/style.css
+++ b/static/style.css
@@ -10,4 +10,19 @@ h1 {
     overflow:scroll;
 }
 
+.div2{
+    background-color:lightblue;
+    width:300px;
+    padding-left:0px;
+    height:50px;
+    text-align:left;
+}
+
+.div3{
+    background-color:lightblue;
+    width:300px;
+    padding-left:0px;
+    height:100px;
+    overflow:scroll;
+}
 
